# docs/app/swagger.yaml
@@ -115,6 +115,11 @@ paths:
       - application/json
       operationId: update-income-money
       parameters:
+      - description: Income money id
+        in: path
+        name: id
+        required: true
+        type: string
       - description: Payload
         in: body
         name: payload
@@ -126,11 +131,9 @@ paths:
       responses:
         "200":
           description: OK
-          schema:
-            $ref: '#/definitions/responsemodel.ResponseCreate'
       security:
       - ApiKeyAuth: []
-      summary: Create
+      summary: Update
       tags:
       - Income
   /ping:
