# pkg/app/handler/income.go
@@ -6,7 +6,9 @@ import (
 	responsemodel "expense-tracker-server/pkg/admin/model/response"
 	requestmodel "expense-tracker-server/pkg/app/model/request"
 	"expense-tracker-server/pkg/app/service"
+	"fmt"
 	"github.com/labstack/echo/v4"
+	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
 // Income ...
@@ -42,28 +44,29 @@ func (Income) Create(c echo.Context) error {
 
 // Update godoc
 // @tags Income
-// @summary Create
+// @summary Update
 // @id update-income-money
 // @security ApiKeyAuth
 // @accept json
 // @produce json
+// @param id path string true "Income money id"
 // @param payload body requestmodel.IncomeBodyUpdate true "Payload"
-// @success 200 {object} responsemodel.ResponseCreate
+// @success 200 {object} nil
 // @router /incomes/{id} [put]
 func (Income) Update(c echo.Context) error {
 	var (
-		ctx     = echocontext.GetContext(c)
-		s       = service.Income()
-		payload = echocontext.GetPayload(c).(requestmodel.IncomeBodyUpdate)
-		userID  = echocontext.GetCurrentUserID(c)
+		ctx      = echocontext.GetContext(c)
+		s        = service.Income()
+		payload  = echocontext.GetPayload(c).(requestmodel.IncomeBodyUpdate)
+		userID   = echocontext.GetCurrentUserID(c)
+		incomeID = echocontext.GetParam(c, "id").(primitive.ObjectID)
 	)
-
-	incomeID, err := s.Update(ctx, userID, payload)
+	fmt.Println("userID", userID)
+	//fmt.Println("incomID", incomeID)
+	result, err := s.Update(ctx, userID, incomeID, payload)
 	if err != nil {
 		return response.R400(c, nil, err.Error())
 	}
 
-	return response.R200(c, responsemodel.ResponseCreate{
-		ID: incomeID,
-	}, "")
+	return response.R200(c, result, "")
 }
